add_subdirectory(CallBack)
add_subdirectory(IDAssigner)
add_subdirectory(STIdentifier)
add_subdirectory(CFG)
add_subdirectory(SideEffect)
add_subdirectory(NoOPT)
add_subdirectory(LoopIdentifier)
add_subdirectory(ReachAnalysis)
add_subdirectory(CD-Constraints)
add_subdirectory(PATH-Constraints)
add_subdirectory(Common)
add_subdirectory(DumpIdentifier)
add_subdirectory(DynTaintAnalyzer)
add_subdirectory(SysLibCounter)
add_subdirectory(Global-Structure)
add_subdirectory(LoopCounter)
add_subdirectory(LoopIOFlagAssigner)
add_subdirectory(StateVarIdentifier)
add_subdirectory(NetworkIO)
add_subdirectory(GetBasicBlockList)
add_subdirectory(MakeSymbolicForKlee)
add_subdirectory(TaintTracking)
add_subdirectory(LongestPath)
